k8s/apps/stella/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    # db で hostPath を使用しているため、ロックを解放してもらわないと新しい Pod が起動できない
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/stella:latest@sha256:c197a4f4b17d553ac32d442ee62606f72f73bb34e235918c617dd18d48528e59
          ports:
            - containerPort: 6742
          volumeMounts:
            - name: media
              mountPath: /app/media
          resources:
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: db
          image: public.ecr.aws/docker/library/mongo:7.0.43-jammy@sha256:f71f6d0913c945096cd058557cbadf4ad435007f378d84b3c4c636c928735e72
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db
              mountPath: /data/db
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: media
          hostPath:
            path: /mnt/local/stella-media
            type: DirectoryOrCreate
        - name: db
          hostPath:
            path: /mnt/local/stella-db
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
