k8s/apps/stella/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`stella.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`stella.starry.blue`)
      services:
        - name: service
          port: 6742
      middlewares:
        - name: headers-stella

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-stella

spec:
  headers:
    customRequestHeaders:
      X-Local-Access: "1"
